Add static content to the web page
- Add sections for header, sidebar, and main view for the todos
- Arrange the initial layout of the web page
- Set up color palette and import fonts

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,18 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  <h1>todo dump</h1>
+  <header id="header">todo dump</header>
+  <aside id="sidebar">
+    <section id="main-categories">
+      <div>All Todos</div>
+      <div>Today</div>
+      <div>This Week</div>
+      <div>Important</div>
+    </section>
+    <section id="custom-categories">
+      <h6>Categories</h6>
+    </section>
+  </aside>
+  <main id="todos-view"></main>
 </body>
 </html>
